--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "sass": "^1.89.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.3.0",
     "vuetify": "^3.9.0-beta.1"
   },
